preferences project rename

--- a/common/commontestapplication/build.gradle
+++ b/common/commontestapplication/build.gradle
@@ -25,6 +25,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.0'
     compile 'com.android.support:design:23.2.0'
     compile project(':activity')
-    compile project(':perferences')
+    compile project(':preferences')
     compile project(':resources')
 }
